--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format": "prettier --write ./src/**/*/*.ts",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
-    "test": "jest --forceExit"
+    "test": "jest --forceExit",
+    "up": "db-migrate up",
+    "down": "db-migrate down"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.3",
@@ -35,10 +37,15 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
+    "db-migrate": "^0.11.14",
+    "db-migrate-pg": "^1.5.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.11.3"
   }
