--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.10",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/pg": "^8.10.9",
     "@types/supertest": "^2.0.16",
